<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- TODO check that this placeholder is no longer used for release versions -->
    <string name="no_description_yet">PLACEHOLDER TEXT FOR DESCRIPTION</string>
    <string name="app_name">Sammelbox-Android</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_album_selection">Album &amp; Saved Search Selection</string>
    <string name="title_activity_synchronization">Synchronization</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_album_item_browse">Browse Items</string>
    <string name="albums_label">Albums</string>
    <string name="saved_searches_label">Saved Searches</string>
    <string name="synchronize_button">Synchronize</string>
    <string name="synchronization">Synchronization</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="help_info">Please select a help topic from below. Please note that you will need
	    to first synchronize with a desktop computer before using Sammelbox on your Android device!</string>
    <string name="title_activity_search">Search Activity</string>
    <string name="select_album">Select an album:</string>
    <string name="select_album_field">Select an album item field:</string>
    <string name="select_operator">Select an operator:</string>
    <string name="select_value_to_match">Value to match:</string>
    <string name="search_matching_items">Search for matching items:</string>
    <string name="value_to_search_for">Value to search for</string>

</resources>
