<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblSearch"
        style="@style/sammelboxAndroidHeading"
        android:text="@string/search" />

    <TextView
        android:id="@+id/lblSelectAlbum"
        style="@style/sammelboxAndroidSmallHeading"
        android:text="@string/select_album" />

    <Spinner
        android:id="@+id/comboSelectAlbum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblSelectAlbumItemField"
        style="@style/sammelboxAndroidSmallHeading"
        android:text="@string/select_album_field" />

    <Spinner
        android:id="@+id/comboSelectAlbumItemField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblSelectOperator"
        style="@style/sammelboxAndroidSmallHeading"
        android:text="@string/select_operator" />

    <Spinner
        android:id="@+id/comboSelectOperator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lblSelectValue"
        style="@style/sammelboxAndroidSmallHeading"
        android:text="@string/select_value_to_match" />
    
    <EditText
        android:id="@+id/edtSearchValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/value_to_search_for"/>
    
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_matching_items" />

</LinearLayout>
